[package]
name = "subtoml"
version = "0.1.0"
authors = ["pbzweihander <pbzweihander@gmail.com>"]
edition = "2018"

description = "Substitute parts of TOML file"
homepage = "https://github.com/pbzweihander/subtoml"
repository = "https://github.com/pbzweihander/subtoml"

keywords = ["cli", "toml"]
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
structopt = "0.2.16"
toml_edit = "0.1.3"
clap = "2.33.0"

[profile.release]
opt-level = 'z'
lto = true
